# go-tensorRT

./: .gitignore  CMakeLists.txt  README.md  build.sh  go.mod  impl.go  impl_test.go  tensorrt.go
internal/tensorRT/: CMakeLists.txt
internal/tensorRT/src/: TensorRTBuffer.h  tensorRT.cpp  tensorRT.h  tensorRT_c.h  tensorrt.go
src/: CTensorRT.cpp  CTensorRT.h  tensorRT.cpp  tensorRT_c.h
